Fix issue with misaligned saving indicator on button #3408

--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -152,6 +152,7 @@
     &.m-button--saving {
       display: flex;
       justify-content: space-around;
+      align-items: center;
     }
 
     ///////////////////////////////////////////////////
